--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <header>vanilla JS boilerplate</header>
+    <custom-button type="primary" text="등록" />
 
     <script src="../dist/main.js"></script>
   </body>
