--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,12 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>vanilla JS boilerplate</title>
+    <title>to do list</title>
   </head>
   <body>
-    <header>vanilla JS boilerplate</header>
     <custom-button type="primary" text="등록" />
-
-    <script src="../dist/main.js"></script>
   </body>
 </html>
