feat: alert 모달 index.html로 이동

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,7 @@
     <title>to do list</title>
   </head>
   <body>
-    <main-page></main-page>
+    <main-page id="main__page"></main-page>
+    <alert-modal id="alert__modal"></alert-modal>
   </body>
 </html>
