feat: notification 관련 이벤트 구현 (#39)
* feat: 알림 패널 open, close 이벤트 구현

* feat: 알림 패널 알림 리스트  데이터 맵핑 구현

* feat: body scroll 관리 util 함수 구현 및 적용

Co-authored-by: gyeongmin kim <a9120a@gamil.com>

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,5 +8,6 @@
   <body>
     <main-page id="main__page"></main-page>
     <alert-modal id="alert__modal"></alert-modal>
+    <notification-panel id="notification-panel"></notification-panel>
   </body>
 </html>
